Closed Bug 1580675 Opened 6 years ago Closed 6 years ago

Fix usage of nsIDocShellTreeItem in nsDocShell::GetIsTopLevelContentDocShell

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla73
Fission Milestone M6
Tracking Status
firefox73 --- fixed

People

(Reporter: djvj, Assigned: djvj)

References

(Blocks 1 open bug)

Details

(Whiteboard: [rm-docshell-tree-item:simple])

Attachments

(1 file)

https://searchfox.org/mozilla-central/rev/a777ff11b6d700a698c61e5bd17e73b044304494/docshell/base/nsDocShell.cpp#13194

This is a simple fix. The code checks if the same-type root tree item is the same as this one. This code can be pretty much ported straight to work on the BrowsingContext tree instead.

Fission Milestone: --- → M5
Priority: -- → P2
Whiteboard: [rm-docshell-tree-item:simple]
Fission Milestone: M5 → Future

Kannan says replacing nsIDocShellTreeItem calls should block enabling Fission in Nightly (M6).

Fission Milestone: Future → M6
Assignee: nobody → kvijayan
Pushed by kvijayan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c9b548372087 Fix usage of nsIDocShellTreeItem in nsDocShell::GetIsTopLevelContentDocShell. r=kmag
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: