Bug 1580675 - Fix usage of nsIDocShellTreeItem in nsDocShell::GetIsTopLevelContentDocShell. r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D55525

--HG--
extra : moz-landing-system : lando